@@ -1,0 +1,39 @@
+package com.robertx22.age_of_exile.saveclasses.unit;
+
+import com.robertx22.age_of_exile.database.data.mob_affixes.MobAffix;
+import com.robertx22.age_of_exile.database.data.rarities.MobRarity;
+import com.robertx22.age_of_exile.database.registry.SlashRegistry;
+import com.robertx22.age_of_exile.uncommon.utilityclasses.RandomUtils;
+import info.loenwind.autosave.annotations.Storable;
+import info.loenwind.autosave.annotations.Store;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
+
+@Storable
+public class MobAffixesData {
+
+    @Store
+    public List<String> affixes = new ArrayList<>();
+
+    public List<MobAffix> getAffixes() {
+        return affixes.stream()
+            .map(x -> SlashRegistry.MobAffixes()
+                .get(x))
+            .collect(Collectors.toList());
+    }
+
+    public void randomizeAffixes(MobRarity rarity) {
+
+        int amount = RandomUtils.roll(rarity.oneAffixChance()) ? 1 : 0;
+
+        this.affixes.clear();
+
+        if (amount > 0) {
+            this.affixes.add(SlashRegistry.MobAffixes()
+                .random()
+                .GUID());
+        }
+    }
+}
